helpMessage Alignment Fix

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -33,6 +33,4 @@ body {
 .helpMessage {
     border-radius: 3px;
     margin-bottom: 20px;
-    margin-right: 0;
-    padding: 9px;
 }
